# liblikeback

./: AUTHORS  CMakeLists.txt  ChangeLog  Messages.sh  NEWS  README  TODO.txt  db.conf.template.php  db.php  fix_magic_quotes.php  functions.inc.php  likeback.pc.in  locales_string.php  send.php
admin/: ajax.php  chresolution.php  comment.php  functions.php  header.php  install.php  options.php  scripts.js  sendReminders.php  stats.php  style.css  upgrade11to12.php  upgrade12to13.php  view.php
admin/templates/email/: comment.tpl  devremark.tpl  reminders.tpl
admin/templates/html/: comment.tpl  commenttable.tpl  header.tpl  lbheader.tpl  lbsubbar.tpl  newremark.tpl  options.tpl  remarks.tpl  statusmenu.tpl  viewfilters.tpl
backend/: db.conf.template.php  db.php  functions.inc.php  index.php  send.php  trac_signal.php
backend/admin/: .htaccess  comment.php  functions.php  index.php  install.php  options.php  scripts.js  stats.php  style.css  upgrade12to13.php  view.php
backend/admin/templates/email/: comment.tpl  devremark.tpl  devremark_todev.tpl  tracintegration_remark.tpl  tracintegration_remark_todev.tpl
backend/admin/templates/html/: bottom.tpl  comment.tpl  comments.tpl  commenttable.tpl  header.tpl  lbheader.tpl  lbsubbar.tpl  newremark.tpl  newremark_closedmutations.tpl  newremark_multi.tpl  newremark_multi_closedmutations.tpl  newremark_multi_openmutations.tpl  newremark_openmutations.tpl  options.tpl  remarks.tpl  stats.tpl  viewfilters.tpl
cmake/modules/: CMakeLists.txt  FindLikeBack.cmake
cron/: crontab  sendReminders.php
data/: CMakeLists.txt
email/: incoming.php
frontend/: likeback.cpp  likeback.h  likebackbar.cpp  likebackdialog.cpp
includes/: CMakeLists.txt  LikeBack
src/: CMakeLists.txt  likeback.cpp  likeback.h  likeback_p.h  likebackbar.cpp  likebackbar.h  likebackbar.ui  likebackdialog.cpp  likebackdialog.h  likebackdialog.ui  likebackexport.h
test/: testsend.html  testtracsignal.html
trac/LikeBackPlugin/: setup.py
trac/LikeBackPlugin/likebackplugin/: __init__.py  likebackplugin.py
